Fixed misalignment bug

--- a/src/Accordion.css
+++ b/src/Accordion.css
@@ -1,7 +1,3 @@
-
-
-
-
 .accordion {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 2px;
@@ -48,7 +44,6 @@
 }
 
 .accordion__heading + div {
-    padding: 20px;
     animation: fadein 0.35s ease-in;
 }
 
